.kubernetes/trading-module-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trading-module
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trading-module
  template:
    metadata:
      labels:
        app: trading-module
    spec:
      containers:
        - name: trading-module
          image: trading-module:v0.1
          ports:
            - containerPort: 8070
          resources: {}
