.kubernetes/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  ports:
    - name: "http"
      port: 3000
      targetPort: 80
  selector:
    app: client
