.kubernetes/collection-module-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collection-module
spec:
  ports:
    - name: "http"
      port: 8071
      targetPort: 8071
  selector:
    app: collection-module
