.kubernetes/trading-module-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trading-module
spec:
  ports:
    - name: "http"
      port: 8070
      targetPort: 8070
  selector:
    app: trading-module
