.kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clipperms-ingress
spec:
  rules:
    - host: clipper-ms.com
      http:
        paths:
          - path: /collection-module
            pathType: Prefix
            backend:
              service:
                name: collection-module
                port:
                  number: 8071
          - path: /trading-module
            pathType: Prefix
            backend:
              service:
                name: trading-module
                port:
                  number: 8070
          - path: /keycloak
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8180
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3000
